Fixed alignment for upload page

--- a/src/components/pages/BrokerageReportUploadPage/components/BrokeragesSelectionZone/BrokeragesSelectionZone.module.css
+++ b/src/components/pages/BrokerageReportUploadPage/components/BrokeragesSelectionZone/BrokeragesSelectionZone.module.css
@@ -5,5 +5,5 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 100px;
+  width: 100%;
 }
